# cmake-seed

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
